# opendiscourse.net-cf

./: .env.bitwarden-template  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitlab-ci.yml  AUTORAG_API_CONFIGURATION_COMPLETE.md  AUTORAG_FINAL_SUMMARY.md  AUTORAG_IMPLEMENTATION_COMPLETE.md  BOTH_APIS_CONFIGURED_AND_VERIFIED.md  CLOUDFLARE_MIGRATION.md  COMMUNITY_GUIDELINES.md  COMPLETE_CONFIGURATION_VERIFIED.md  CONTRIBUTING.md  DEPLOYMENT_CLOUDFLARE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.worker  ESLINT_ANALYSIS.md  FINAL_REPO_README.md  FINAL_SETUP_SUMMARY.md  FULL_DEPLOYMENT_GUIDE.md  GIT_REPOSITORY_SETUP.md  IMPROVEMENT_PLAN.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SUCCESS.md  LICENSE  OPENDISCOURSE_PLAN.md  PACKAGING.md  PRIVACY.md  QWEN.md  README-INFRA.md  README.md  REPO_UPLOAD_COMPLETE.md  TECHNICAL_SUMMARY.md  TERMS.md  UPLOAD_TO_GITHUB_GITLAB.md  agents.md  data_dictionary.md  demo_pipeline.ts  (+19 more)
.github/: branch-protection.yml
agentic_graph/: METHODOLOGY.md  README.md  SYSTEM_SUMMARY.md  orchestrator.ts  package.json  test_graph.ts  tsconfig.json
ai_crew/: README.md  ai_loop.py  crew.py  documentation_report.md  implementation_crew.py  improvement_proposals.md  qa_report.md  requirements.txt  run_analysis.py
ai_implementations/: implementation_results_20250828_231559.json  implementation_results_20250828_232356.json
analysis_results/: analysis_results_20250903_210752.json
archive/: AUTORAG_FINAL_SUMMARY.md  BOTH_APIS_CONFIGURED_AND_VERIFIED.md  COMPLETE_CONFIGURATION_VERIFIED.md  DEPLOYMENT.md  FINAL_REPO_README.md  GITHUB_SETUP.md  (+14 more)
(+301 files in other folders)
