[tool.poetry]
name = "opendiscourse-net-cf"
version = "0.1.0"
description = "OpenDiscourse utilities and crew scaffolds"
authors = ["cbwinslow <devnull@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
